Produce a backtrace on signal before exiting
Depends on libexecinfo-dev that needs changing
the build container. That diff in a separate
commit.

Signed-off-by: Madhu Challa <challa@gmail.com>

--- a/agent-ovs/Makefile.am
+++ b/agent-ovs/Makefile.am
@@ -372,6 +372,8 @@ opflex_agent_LDADD = \
 	$(PROMETHEUS_PULL_LIBS) \
 	libopflex_agent.la
 
+opflex_agent_LDADD += -lexecinfo
+
 gbp_inspect_CXXFLAGS = -DSYSCONFDIR='"$(sysconfdir)"'
 if ENABLE_TSAN
   gbp_inspect_CXXFLAGS += -fsanitize=thread
