Async Json Parser for Opflex and Ovs
Allow parsing partial json messages. Invokes comms callback on parse complete
and continues with the parse. Currently supports only one reader and writer
per comms object. On error the callback disconnects and reconnects with the
client there by preserving the sanity of the json stream.

Controlled via 2 env variables OPFLEX_USE_ASYNC_JSON for leaf <> opflex comms
and OVS_USE_ASYNC_JSON for ovsdb <> opflex comms. The usage will be
OPFLEX_USE_ASYNC_JSON= OVS_USE_ASYNC_JSON= <opflex command>, the same can
be provided via docker env variables when running under docker. If neither
env variable is present the code reverts to the old sync way of parsing that
would fail if the json comes in partial chunks.

The env variables can be set via config as
    "opflex": {
        "asyncjson" : { "enabled" : "true" }
    },
    "ovs": {
        "asyncjson" : { "enabled" : "true" }
    },

Signed-off-by: Madhu Challa <challa@gmail.com>

--- a/libopflex/Makefile.am
+++ b/libopflex/Makefile.am
@@ -102,7 +102,8 @@ util_include_HEADERS = \
 	include/opflex/util/ThreadManager.h
 yajr_includedir = $(includedir)/opflex/yajr
 yajr_include_HEADERS = \
-    include/opflex/yajr/yajr.hpp
+    include/opflex/yajr/yajr.hpp \
+    include/opflex/yajr/async_doc_parser.hpp
 yajr_internal_includedir = $(includedir)/opflex/yajr/internal
 yajr_internal_include_HEADERS = \
     include/opflex/yajr/internal/comms.hpp
